// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "MANDATORY: Read this skill BEFORE calling any Foundry MCP tool. Use when working with Microsoft Foundry (Azure AI Foundry): deploy AI models, manage agents (create, deploy, invoke, troubleshoot), quotas, capacity, Foundry resources. USE FOR: Microsoft Foundry, AI Foundry, hosted agent, prompt agent, create agent, deploy agent, monitor agent, invoke agent, run agent, agent chat, evaluate agent, deploy model, model catalog, create Foundry project, set up Foundry, create Foundry resource, create AI Services, AIServices kind, register resource provider, role assignment, quota, capacity, TPM, deployment failure, standard agent setup, capability host. DO NOT USE FOR: Azure Functions (use azure-functions), App Service (use azure-create-app), generic Azure resource creation (use azure-create-app).",
  "extractedKeywords": [
    "agent",
    "agents",
    "aiservices",
    "assignment",
    "azure",
    "azure-create-app",
    "azure-functions",
    "before",
    "bicep",
    "calling",
    "capability",
    "capacity",
    "catalog",
    "chat",
    "cli",
    "container",
    "create",
    "creation",
    "deploy",
    "deployment",
    "evaluate",
    "failure",
    "foundry",
    "functions",
    "generic",
    "host",
    "hosted",
    "identity",
    "invoke",
    "kind",
    "manage",
    "mandatory",
    "mcp",
    "microsoft",
    "model",
    "models",
    "monitor",
    "project",
    "prompt",
    "provider",
    "quota",
    "quotas",
    "rbac",
    "read",
    "register",
    "resource",
    "resources",
    "role",
    "service",
    "services",
    "setup",
    "skill",
    "standard",
    "storage",
    "this",
    "tool",
    "troubleshoot",
    "validation",
    "when",
    "with",
    "working",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`create - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "aiservices",
  "assignment",
  "azure",
  "azure-create-app",
  "azure-functions",
  "before",
  "bicep",
  "calling",
  "capability",
  "capacity",
  "catalog",
  "chat",
  "cli",
  "container",
  "create",
  "creation",
  "deploy",
  "deployment",
  "evaluate",
  "failure",
  "foundry",
  "functions",
  "generic",
  "host",
  "hosted",
  "identity",
  "invoke",
  "kind",
  "manage",
  "mandatory",
  "mcp",
  "microsoft",
  "model",
  "models",
  "monitor",
  "project",
  "prompt",
  "provider",
  "quota",
  "quotas",
  "rbac",
  "read",
  "register",
  "resource",
  "resources",
  "role",
  "service",
  "services",
  "setup",
  "skill",
  "standard",
  "storage",
  "this",
  "tool",
  "troubleshoot",
  "validation",
  "when",
  "with",
  "working",
]
`;
